--- a/public/css/app.css
+++ b/public/css/app.css
@@ -599,6 +599,12 @@ progress {
   height: auto;
 }
 
+.img-thumbnail-logo {
+    padding: 0.25rem;
+    max-width: 100%;
+    height: auto;
+}
+
 .img-thumbnail {
   padding: 0.25rem;
   background-color: #f8fafc;
@@ -3713,7 +3719,7 @@ textarea.form-control-lg {
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
-  color: #0d6efd;
+  color: #fff;
   text-decoration: none;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
